--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.4",
     "axios": "^1.8.4",
-    "expo": "~52.0.42",
+    "expo": "^52.0.46",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
@@ -31,7 +31,8 @@
     "expo-linking": "~7.0.5",
     "expo-notifications": "^0.29.14",
     "expo-router": "~4.0.19",
-    "expo-splash-screen": "~0.29.22",
+    "expo-screen-capture": "^7.0.1",
+    "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
